--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,16 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="97b678">  <td>21/09/17 15:51:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestFacebookLoginPage.amextentreport(org.testng.ITestResult)[pri:0, instance:com.pom.testcases.TestFacebookLoginPage@2de23121]">&lt;&lt;amextentreport</td> 
-<td>&nbsp;</td>  <td>main@954702563</td>   <td></td> </tr>
-<tr bgcolor="97b678">  <td>21/09/17 15:51:32</td>   <td>21534</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestFacebookLoginPage.amextentreport(org.testng.ITestResult)[pri:0, instance:com.pom.testcases.TestFacebookLoginPage@2de23121]">&lt;&lt;amextentreport</td> 
-<td>&nbsp;</td>  <td>main@954702563</td>   <td></td> </tr>
-<tr bgcolor="97b678">  <td>21/09/17 15:51:32</td>   <td>21538</td> <td>&nbsp;</td><td title="&lt;&lt;TestFacebookLoginPage.endReport()[pri:0, instance:com.pom.testcases.TestFacebookLoginPage@2de23121]">&lt;&lt;endReport</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@954702563</td>   <td></td> </tr>
-<tr bgcolor="97b678">  <td>21/09/17 15:50:56</td>   <td>-14654</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestFacebookLoginPage.enterCredentials()[pri:0, instance:com.pom.testcases.TestFacebookLoginPage@2de23121]">enterCredentials</td> 
-  <td>main@954702563</td>   <td></td> </tr>
-<tr bgcolor="97b678">  <td>21/09/17 15:51:10</td>   <td>13</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestFacebookLoginPage.getLoginError()[pri:0, instance:com.pom.testcases.TestFacebookLoginPage@2de23121]">getLoginError</td> 
-  <td>main@954702563</td>   <td></td> </tr>
-<tr bgcolor="97b678">  <td>21/09/17 15:50:55</td>   <td>-14786</td> <td>&nbsp;</td><td title="&gt;&gt;TestFacebookLoginPage.setExtent()[pri:0, instance:com.pom.testcases.TestFacebookLoginPage@2de23121]">&gt;&gt;setExtent</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@954702563</td>   <td></td> </tr>
+<tr bgcolor="bdf5e5">  <td>21/09/21 15:48:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestFacebookLoginPage.amextentreport(org.testng.ITestResult)[pri:0, instance:com.pom.testcases.TestFacebookLoginPage@4cc8eb05]">&lt;&lt;amextentreport</td> 
+<td>&nbsp;</td>  <td>main@1306834002</td>   <td></td> </tr>
+<tr bgcolor="bdf5e5">  <td>21/09/21 15:48:28</td>   <td>23</td> <td>&nbsp;</td><td title="&lt;&lt;TestFacebookLoginPage.endReport()[pri:0, instance:com.pom.testcases.TestFacebookLoginPage@4cc8eb05]">&lt;&lt;endReport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1306834002</td>   <td></td> </tr>
+<tr bgcolor="bdf5e5">  <td>21/09/21 15:48:13</td>   <td>-15056</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestFacebookLoginPage.enterCredentials()[pri:0, instance:com.pom.testcases.TestFacebookLoginPage@4cc8eb05]">enterCredentials</td> 
+  <td>main@1306834002</td>   <td></td> </tr>
+<tr bgcolor="bdf5e5">  <td>21/09/21 15:48:13</td>   <td>-15176</td> <td>&nbsp;</td><td title="&gt;&gt;TestFacebookLoginPage.setExtent()[pri:0, instance:com.pom.testcases.TestFacebookLoginPage@4cc8eb05]">&gt;&gt;setExtent</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1306834002</td>   <td></td> </tr>
 </table>
