--- a/test-output/old/FacebookPageSuite/methods-alphabetical.html
+++ b/test-output/old/FacebookPageSuite/methods-alphabetical.html
@@ -1,6 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>FacebookPageSuite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="616362">  <td>21/09/19 19:19:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestFBForgotPassword.testForgotPassword()[pri:0, instance:com.pom.testcases.TestFBForgotPassword@711f39f9]">testForgotPassword</td> 
-  <td>main@438135304</td>   <td></td> </tr>
+<tr bgcolor="a3707a">  <td>21/09/22 00:38:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestFBForgotPassword.testForgotPassword()[pri:0, instance:com.pom.testcases.TestFBForgotPassword@281e3708]">testForgotPassword</td> 
+  <td>main@1381713434</td>   <td></td> </tr>
 </table>
